--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=3000
+DATABASE=mongodb+srv://esteban:<PASSWORD>@cluster0.xr2zi.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=9Wp5MANeZynlDPni
